Bug 1499941 - Fix spatial vs. scroll coordinate confusion around APZCTreeManager::ProcessDynamicToolbarMovement() and helpers. r=kats

Differential Revision: https://phabricator.services.mozilla.com/D9715